--- a/AssignmentQuestions/task2.html
+++ b/AssignmentQuestions/task2.html
@@ -13,8 +13,8 @@
     <br />
     H no. 30 Uma Vihar phase-2, <br />
     Ayodhya Bypass Bhopal(462023) <br />
-    Madhya Pradesh(India) <br />
-    <br />
+    Madhya Pradesh(India)
+    
     <h3>
       <b><u>Objective</u></b>
     </h3>
