--- a/listHtml/q3.html
+++ b/listHtml/q3.html
@@ -1,12 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    h3
+  </head>
+  <body>
+    <b> Quiz- </b>
+    <ol>
+      <li>Html is an_____?</li>
+      <ol type="i">
+        <li>Markup Language</li>
+        <li>Programming language</li>
+        <li>None of these</li>
+      </ol>
+      <li>CSS is used for-</li>
+      <ol type="i">
+        <li>Styling</li>
+        <li>Scripting</li>
+        <li>None Of These</li>
+      </ol>
+      <li>Which of the following  is dynamic form of HTML?</li>
+      <ol type = "i">
+        <li>XML</li>
+        <li>DHTML</li>
+        <li>None of these</li>
+      </ol>
+      <li>Which of the following can be linked with HTML and CSS?</li>
+      <ol type = "i">
+        <li>JavaScript</li>
+        <li>C++</li>
+        <li>None of these</li>
+      </ol>
+      </ol>
+      <hr>
+
+
+
+
+
+      <ol>
+        <li>Apple-
+            <ol>
+                <li>Indian Apple
+                    <ol>
+                        <li>Kashmiri Apple</li>
+                        <li>MadhyaPradeshiApple</li>
+                    </ol>
+                </li>
+                <li>Italian Apple</li>
+                <li>Australian Apple</li>
+            </ol>
+        </li>
+        <li>Mango</li>
+        <li>Banana</li>
+      </ol>
     
-</body>
+    
+
+  </body>
 </html>
