--- a/listHtml/q6.html
+++ b/listHtml/q6.html
@@ -33,7 +33,7 @@
             </ol>
         </li>
         <li>List Item 3
-            <ul type = "09icircle">
+            <ul type = "circle">
                 <li>Item 1</li>
                 <li>Item 2</li>
                 <li>Item 3</li>
