--- a/tableHtml/table.html
+++ b/tableHtml/table.html
@@ -6,38 +6,43 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1" cellspacing = "0" bgcolor="pink">
-        <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Gender</th>
-
-        </tr>
-        <tr>
-            <td>Aachika</td>
-            <td>Nandini</td>
-            <td>Bhumika</td>
-        </tr>
-    </table>
-    <hr>
-    <table border = "1" cellspacing = "0">
-        <tr>
-            <th>ID</th>
-            <th>CustomerName</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>ProductName</th>
-            <th>Totalprice</th>
-        </tr>
-        <tr>
-            <td rowspan="4">1</td>
-            <td rowspan="">Ram</td>
-            <td>Realme C1</td>
-            <td>2</td>
-            <td>6000</td>
-            <td rowspan="4">17550</td>
-        </tr>
-        
-    
+    <caption>
+        <h2>Employee Details-</h2>
+    </caption>
+        <table border = "1" cellspacing = "0" bgcolor="pink">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Address</th>
+                <th>Contact</th>
+            </tr>
+             </thead>
+             <tbody>
+            <tr>
+                <td>Aanya</td>
+                <td>Bhopal</td>
+                <td>9876543210</td>
+            </tr>
+            <tr>
+                <td>Ansh</td>
+                <td>Gwalior</td>
+                <td>9329817407</td>
+            </tr>
+            <tr>
+                <td>Prince</td>
+                <td>Indore</td>
+                <td>9876543211</td>
+            </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>
+                        <b>Total Rows: 3</b>
+                        <td>MadhyaPradesh</td>
+                        <td>India</td>
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
 </body>
 </html>
