--- a/formshtml/q2.html
+++ b/formshtml/q2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Pizza Ordering form</h2>
+    <h2  style="font-family: Arial, Helvetica, sans-serif">Pizza Ordering form</h2>
     <label for="firstName">First Name:</label>
     <input type="text" id="firstName" name="firstName">
     <br>
