--- a/formshtml/q6.html
+++ b/formshtml/q6.html
@@ -9,7 +9,7 @@
     <table width="100%" cellpadding="20" cellspacing="0" border="0">
       <tr valign="top">
         <td width="45%" align="right">
-          <img src="doctor.png" alt="Doctor" width="400" />
+          <img src="https://static.vecteezy.com/system/resources/previews/028/287/555/non_2x/an-indian-young-female-doctor-isolated-on-green-ai-generated-photo.jpg" alt="Doctor" width="200" />
         </td>
 
         <td width="55%">
