--- a/formshtml/q5.html
+++ b/formshtml/q5.html
@@ -12,20 +12,20 @@
       <fieldset>
         <legend>Personal Details</legend>
 
-        <table border="0" cellpadding="6" cellspacing="0">
+        <table border="1" cellpadding="5" cellspacing="0">
           <tr>
-            <td width="300">Applicant's full name</td>
-            <td width="500">
+            <td width="200" >Applicant's full name</td>
+            <td width="200">
               <select name="applicant_title">
                 <option value="">--Select--</option>
                 <option>Mr.</option>
                 <option>Ms.</option>
                 <option>Mrs.</option>
               </select>
-              <input type="text" name="applicant_name" />
+              <input type="text" name="applicant_name" placeholder ="full name"/>
             </td>
 
-            <td width="300">Care Of</td>
+            <td width="400">Care Of</td>
             <td>
               <label
                 ><input type="radio" name="careof" value="parents" />
